deploy: 225e697ba0a6ed8e4b652a6f673b7e0e90f9c112

--- a/datastructure/rope.html
+++ b/datastructure/rope.html
@@ -148,7 +148,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="rope"><a class="header" href="#rope">Rope</a></h1>
-<p>Rope acts as if it is a list, but inserting a value at an arbitrary position takes time complexity of amortized \( O(\log{N}) \). However, accessing values also takes amortized \( O(\log{x}) \) time. Building a rope from an iterator takes \( O(N) \).</p>
+<p>Rope acts as if it is a list, but inserting a value at an arbitrary position takes time complexity of amortized \( O(\log{N}) \). However, accessing values also takes amortized \( O(\log{N}) \) time. Building a rope from an iterator takes \( O(N) \).</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>use rope::Rope;
