--- a/datastructure/segtree/fenwick.html
+++ b/datastructure/segtree/fenwick.html
@@ -154,7 +154,7 @@
 <li>Calculate the sum of the elements of an interval</li>
 </ul>
 <p>A Fenwick tree uses half the memory of a segment tree, but the performance in terms of time is just about the same.</p>
-<p>A type of elements of \(A\) must be a primitive signed integer type, such as <code>i32</code> and <code>i64</code>, and floats such as <code>f64</code>. Unsigned integer types like <code>u64</code> do not work.</p>
+<p>A type of elements of \(A\) must be a primitive signed integer type, such as <code>i32</code> and <code>i64</code>, and floats such as <code>f64</code>. Unsigned integer types like <code>u64</code> do not work. Specifically, the type should implement <code>From&lt;i8&gt;</code>.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>let mut fw: Fenwick&lt;i32&gt; = Fenwick::new(10);
@@ -162,7 +162,6 @@ for i in 0..10 {
     print!(&quot;{} &quot;, fw.get(i));
 }
 println!(); // 0 0 0 0 0 0 0 0 0 0
-
 fw.add(2, 10);
 fw.add(5, 100);
 fw.add(3, -1);
@@ -170,9 +169,9 @@ for i in 0..10 {
     print!(&quot;{} &quot;, fw.get(i));
 }
 println!(); // 0 0 10 -1 0 100 0 0 0 0
+println!(&quot;{}&quot;, fw.sum(3..8)); // 99
 <span class="boring">}
 </span><span class="boring">
-</span><span class="boring">#[derive(Clone, Debug)]
 </span><span class="boring">struct Fenwick&lt;T&gt; {
 </span><span class="boring">    n: usize,
 </span><span class="boring">    data: Vec&lt;T&gt;,
@@ -195,10 +194,21 @@ println!(); // 0 0 10 -1 0 100 0 0 0 0
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn get(&amp;self, idx: usize) -&gt; T {
-</span><span class="boring">        self.sum(idx, idx + 1)
+</span><span class="boring">        self.sum(idx..=idx)
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn sum(&amp;self, l: usize, r: usize) -&gt; T {
+</span><span class="boring">    fn sum(&amp;self, range: impl std::ops::RangeBounds&lt;usize&gt;) -&gt; T {
+</span><span class="boring">        use std::ops::Bound::*;
+</span><span class="boring">        let l = match range.start_bound() {
+</span><span class="boring">            Included(&amp;v) =&gt; v,
+</span><span class="boring">            Excluded(&amp;v) =&gt; v + 1,
+</span><span class="boring">            Unbounded =&gt; 0,
+</span><span class="boring">        };
+</span><span class="boring">        let r = match range.end_bound() {
+</span><span class="boring">            Included(&amp;v) =&gt; v + 1,
+</span><span class="boring">            Excluded(&amp;v) =&gt; v,
+</span><span class="boring">            Unbounded =&gt; self.n,
+</span><span class="boring">        };
 </span><span class="boring">        self.inner_sum(r) - self.inner_sum(l)
 </span><span class="boring">    }
 </span><span class="boring">
@@ -234,10 +244,21 @@ impl&lt;T: Copy + From&lt;i8&gt; + std::ops::AddAssign + std::ops::Sub&lt;Output
     }
 
     fn get(&amp;self, idx: usize) -&gt; T {
-        self.sum(idx, idx + 1)
+        self.sum(idx..=idx)
     }
 
-    fn sum(&amp;self, l: usize, r: usize) -&gt; T {
+    fn sum(&amp;self, range: impl std::ops::RangeBounds&lt;usize&gt;) -&gt; T {
+        use std::ops::Bound::*;
+        let l = match range.start_bound() {
+            Included(&amp;v) =&gt; v,
+            Excluded(&amp;v) =&gt; v + 1,
+            Unbounded =&gt; 0,
+        };
+        let r = match range.end_bound() {
+            Included(&amp;v) =&gt; v + 1,
+            Excluded(&amp;v) =&gt; v,
+            Unbounded =&gt; self.n,
+        };
         self.inner_sum(r) - self.inner_sum(l)
     }
 
