--- a/graphs/scc.html
+++ b/graphs/scc.html
@@ -148,157 +148,306 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="strongly-connected-components"><a class="header" href="#strongly-connected-components">Strongly Connected Components</a></h1>
-<pre><code class="language-rust noplayground">#[derive(Debug)]
-struct Graph&lt;T&gt; {
-    n: u32,
-    first: Vec&lt;u32&gt;,
-    edge: Vec&lt;(u32, u32, T)&gt;, // (to, prev, data)
-}
+<p>Code for calculating SCCs. Tarjan's algorithm is used for the algorithm. <a href="./adjlist.html">Adjancy list representation</a> should be included in the code for this snippet to work.</p>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
+<pre><pre class="playground"><code class="language-rust">use scc::*;
+<span class="boring">
+</span><span class="boring">fn main() {
+</span>let mut graph: Graph&lt;()&gt; = Graph::new(5, 5);
 
-impl&lt;T&gt; Graph&lt;T&gt; {
-    fn new(n: u32, e: u32) -&gt; Self {
-        Self {
-            n,
-            first: vec![u32::MAX; n as usize],
-            edge: Vec::with_capacity(e as usize),
-        }
+graph.add_edge(0, 2, ());
+graph.add_edge(3, 0, ());
+graph.add_edge(2, 3, ());
+graph.add_edge(0, 1, ());
+graph.add_edge(1, 4, ());
+
+let scc = Scc::new(&amp;graph);
+println!(&quot;{:?}&quot;, scc.get_scc_list()); // [[3, 2, 0], [1], [4]]
+println!(&quot;{:?}&quot;, scc.get_scc_ids()); // [0, 1, 0, 0, 2]
+<span class="boring">}
+</span><span class="boring">
+</span><span class="boring">#[derive(Debug)]
+</span><span class="boring">struct Graph&lt;T&gt; {
+</span><span class="boring">    n: usize,
+</span><span class="boring">    first: Vec&lt;usize&gt;,
+</span><span class="boring">    edge: Vec&lt;(usize, usize, T)&gt;, // (to, prev, data)
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">impl&lt;T&gt; Graph&lt;T&gt; {
+</span><span class="boring">    fn new(n: usize, e: usize) -&gt; Self {
+</span><span class="boring">        Self {
+</span><span class="boring">            n,
+</span><span class="boring">            first: vec![usize::MAX; n],
+</span><span class="boring">            edge: Vec::with_capacity(e),
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    fn add_edge(&amp;mut self, from: usize, to: usize, data: T) {
+</span><span class="boring">        let prev = std::mem::replace(&amp;mut self.first[from], self.edge.len());
+</span><span class="boring">        self.edge.push((to, prev, data));
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    fn neighbor(&amp;self, of: usize) -&gt; Neighbor&lt;T&gt; {
+</span><span class="boring">        Neighbor {
+</span><span class="boring">            graph: self,
+</span><span class="boring">            next_edge: self.first[of],
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">struct Neighbor&lt;'g, T&gt; {
+</span><span class="boring">    graph: &amp;'g Graph&lt;T&gt;,
+</span><span class="boring">    next_edge: usize,
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">impl&lt;'g, T&gt; Iterator for Neighbor&lt;'g, T&gt; {
+</span><span class="boring">    type Item = (usize, &amp;'g T);
+</span><span class="boring">
+</span><span class="boring">    fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt; {
+</span><span class="boring">        let (to, next_edge, data) = self.graph.edge.get(self.next_edge)?;
+</span><span class="boring">        self.next_edge = *next_edge;
+</span><span class="boring">        Some((*to, data))
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">mod scc {
+</span><span class="boring">    use super::*;
+</span><span class="boring">    struct SccStack {
+</span><span class="boring">        stack: Vec&lt;u32&gt;,
+</span><span class="boring">        check: Vec&lt;bool&gt;,
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    impl SccStack {
+</span><span class="boring">        fn new(cap: usize) -&gt; Self {
+</span><span class="boring">            Self {
+</span><span class="boring">                stack: vec![0; cap],
+</span><span class="boring">                check: vec![false; cap],
+</span><span class="boring">            }
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        fn push(&amp;mut self, n: usize) {
+</span><span class="boring">            self.stack.push(n as u32);
+</span><span class="boring">            self.check[n] = true;
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        fn pop(&amp;mut self) -&gt; Option&lt;usize&gt; {
+</span><span class="boring">            let tmp = self.stack.pop()? as usize;
+</span><span class="boring">            self.check[tmp] = false;
+</span><span class="boring">            Some(tmp)
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        fn contains(&amp;self, n: usize) -&gt; bool {
+</span><span class="boring">            self.check[n]
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    pub struct Scc&lt;'g, T&gt; {
+</span><span class="boring">        graph: &amp;'g Graph&lt;T&gt;,
+</span><span class="boring">        scc_list: Vec&lt;Vec&lt;usize&gt;&gt;,
+</span><span class="boring">        scc_ids: Vec&lt;usize&gt;,
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    impl&lt;'g, T: 'g&gt; Scc&lt;'g, T&gt; {
+</span><span class="boring">        pub(super) fn new(graph: &amp;'g Graph&lt;T&gt;) -&gt; Self {
+</span><span class="boring">            let mut st = SccStack::new(graph.n);
+</span><span class="boring">            let mut list = vec![];
+</span><span class="boring">            let mut gid = 0;
+</span><span class="boring">            let mut id = vec![graph.n; graph.n];
+</span><span class="boring">            let mut low = vec![usize::MAX; graph.n];
+</span><span class="boring">
+</span><span class="boring">            for x in 0..graph.n {
+</span><span class="boring">                if id[x] != graph.n {
+</span><span class="boring">                    continue;
+</span><span class="boring">                }
+</span><span class="boring">                Self::dfs(graph, x, &amp;mut gid, &amp;mut id, &amp;mut low, &amp;mut st, &amp;mut list);
+</span><span class="boring">            }
+</span><span class="boring">            list.reverse();
+</span><span class="boring">
+</span><span class="boring">            let mut ids = vec![0; graph.n];
+</span><span class="boring">            for (i, l) in list.iter().enumerate() {
+</span><span class="boring">                for &amp;v in l.iter() {
+</span><span class="boring">                    ids[v] = i;
+</span><span class="boring">                }
+</span><span class="boring">            }
+</span><span class="boring">
+</span><span class="boring">            Self {
+</span><span class="boring">                graph,
+</span><span class="boring">                scc_list: list,
+</span><span class="boring">                scc_ids: ids,
+</span><span class="boring">            }
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        fn dfs(
+</span><span class="boring">            graph: &amp;Graph&lt;T&gt;,
+</span><span class="boring">            curr: usize,
+</span><span class="boring">            gid: &amp;mut usize,
+</span><span class="boring">            id: &amp;mut Vec&lt;usize&gt;,
+</span><span class="boring">            low: &amp;mut Vec&lt;usize&gt;,
+</span><span class="boring">            st: &amp;mut SccStack,
+</span><span class="boring">            list: &amp;mut Vec&lt;Vec&lt;usize&gt;&gt;,
+</span><span class="boring">        ) {
+</span><span class="boring">            st.push(curr);
+</span><span class="boring">            id[curr] = *gid;
+</span><span class="boring">            low[curr] = *gid;
+</span><span class="boring">            *gid += 1;
+</span><span class="boring">
+</span><span class="boring">            for (next, _) in graph.neighbor(curr) {
+</span><span class="boring">                if id[next] == graph.n {
+</span><span class="boring">                    Self::dfs(graph, next, gid, id, low, st, list);
+</span><span class="boring">                }
+</span><span class="boring">            }
+</span><span class="boring">
+</span><span class="boring">            for (next, _) in graph.neighbor(curr) {
+</span><span class="boring">                if st.contains(next) {
+</span><span class="boring">                    low[curr] = low[curr].min(low[next]);
+</span><span class="boring">                }
+</span><span class="boring">            }
+</span><span class="boring">
+</span><span class="boring">            if id[curr] == low[curr] {
+</span><span class="boring">                let mut newlist = vec![];
+</span><span class="boring">                while let Some(popped) = st.pop() {
+</span><span class="boring">                    if popped == curr {
+</span><span class="boring">                        break;
+</span><span class="boring">                    }
+</span><span class="boring">                    newlist.push(popped);
+</span><span class="boring">                }
+</span><span class="boring">                newlist.push(curr);
+</span><span class="boring">                list.push(newlist);
+</span><span class="boring">            }
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        /// Returns list of SCCs. Each vector in the list is a single SCC. The order of SCCs are
+</span><span class="boring">        /// sorted in topological order. That is,, if u and v are in different SCCs, and there is
+</span><span class="boring">        /// an edge from u to v, then the SCC containing u appears earlier than the SCC containing
+</span><span class="boring">        /// v in the list. The order of vertices in each SCC is unspecified.
+</span><span class="boring">        pub fn get_scc_list(&amp;self) -&gt; &amp;Vec&lt;Vec&lt;usize&gt;&gt; {
+</span><span class="boring">            &amp;self.scc_list
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        /// Returns SCC ids. If u is in scc_list[i], then scc_id[u] = i.
+</span><span class="boring">        pub fn get_scc_ids(&amp;self) -&gt; &amp;Vec&lt;usize&gt; {
+</span><span class="boring">            &amp;self.scc_ids
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">}</span></code></pre></pre>
+<h2 id="code"><a class="header" href="#code">Code</a></h2>
+<pre><code class="language-rust noplayground">mod scc {
+    use super::*;
+    struct SccStack {
+        stack: Vec&lt;u32&gt;,
+        check: Vec&lt;bool&gt;,
     }
 
-    fn add_edge(&amp;mut self, from: u32, to: u32, data: T) {
-        let prev = std::mem::replace(&amp;mut self.first[from as usize], self.edge.len() as u32);
-        self.edge.push((to, prev, data));
-    }
-
-    fn neighbor(&amp;self, of: u32) -&gt; Neighbor&lt;T&gt; {
-        Neighbor {
-            graph: self,
-            next_edge: self.first[of as usize],
-        }
-    }
-}
-
-struct Neighbor&lt;'g, T&gt; {
-    graph: &amp;'g Graph&lt;T&gt;,
-    next_edge: u32,
-}
-
-impl&lt;'g, T&gt; Iterator for Neighbor&lt;'g, T&gt; {
-    type Item = (u32, &amp;'g T);
-
-    fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt; {
-        let (to, next_edge, data) = self.graph.edge.get(self.next_edge as usize)?;
-        self.next_edge = *next_edge;
-        Some((*to, data))
-    }
-}
-
-struct SccStack {
-    stack: Vec&lt;u32&gt;,
-    check: Vec&lt;bool&gt;,
-}
-
-impl SccStack {
-    fn new(cap: u32) -&gt; Self {
-        Self {
-            stack: vec![0; cap as usize],
-            check: vec![false; cap as usize],
-        }
-    }
-
-    fn len(&amp;self) -&gt; u32 {
-        self.stack.len() as u32
-    }
-
-    fn push(&amp;mut self, n: u32) {
-        self.stack.push(n);
-        self.check[n as usize] = true;
-    }
-
-    fn get(&amp;self) -&gt; u32 {
-        self.stack[self.len() as usize - 1]
-    }
-
-    fn pop(&amp;mut self) -&gt; u32 {
-        let tmp = self.stack.pop().unwrap();
-        self.check[tmp as usize] = false;
-        tmp
-    }
-
-    fn is_in(&amp;self, n: u32) -&gt; bool {
-        self.check[n as usize]
-    }
-}
-
-struct SCC&lt;'g, T&gt; {
-    graph: &amp;'g Graph&lt;T&gt;,
-    scc_list: Vec&lt;Vec&lt;u32&gt;&gt;,
-    scc_ids: Vec&lt;u32&gt;,
-}
-
-impl&lt;'g, T: 'g&gt; SCC&lt;'g, T&gt; {
-    fn new(graph: &amp;'g Graph&lt;T&gt;) -&gt; Self {
-        let mut st = SccStack::new(graph.n);
-        let mut list: Vec&lt;Vec&lt;u32&gt;&gt; = Vec::new();
-        let mut gid: u32 = 0;
-        let mut id = vec![graph.n; graph.n as usize];
-        let mut low = vec![u32::MAX; graph.n as usize];
-
-        for x in 0..graph.n {
-            if id[x as usize] != graph.n {
-                continue;
+    impl SccStack {
+        fn new(cap: usize) -&gt; Self {
+            Self {
+                stack: vec![0; cap],
+                check: vec![false; cap],
             }
-            Self::dfs(graph, x, &amp;mut gid, &amp;mut id, &amp;mut low, &amp;mut st, &amp;mut list)
-        }
-        list.reverse();
-
-        let mut ids = vec![0u32; graph.n as usize];
-        for (i, l) in list.iter().enumerate() {
-            for &amp;v in l.iter() {
-                ids[v as usize] = i as u32;
-            }
         }
 
-        Self {
-            graph,
-            scc_list: list,
-            scc_ids: ids,
+        fn push(&amp;mut self, n: usize) {
+            self.stack.push(n as u32);
+            self.check[n] = true;
+        }
+
+        fn pop(&amp;mut self) -&gt; Option&lt;usize&gt; {
+            let tmp = self.stack.pop()? as usize;
+            self.check[tmp] = false;
+            Some(tmp)
+        }
+
+        fn contains(&amp;self, n: usize) -&gt; bool {
+            self.check[n]
         }
     }
 
-    fn dfs(
-        graph: &amp;Graph&lt;T&gt;,
-        curr: u32,
-        gid: &amp;mut u32,
-        id: &amp;mut Vec&lt;u32&gt;,
-        low: &amp;mut Vec&lt;u32&gt;,
-        st: &amp;mut SccStack,
-        list: &amp;mut Vec&lt;Vec&lt;u32&gt;&gt;,
-    ) {
-        st.push(curr);
-        id[curr as usize] = *gid;
-        low[curr as usize] = *gid;
-        (*gid) += 1;
+    pub struct Scc&lt;'g, T&gt; {
+        graph: &amp;'g Graph&lt;T&gt;,
+        scc_list: Vec&lt;Vec&lt;usize&gt;&gt;,
+        scc_ids: Vec&lt;usize&gt;,
+    }
 
-        for (next, _) in graph.neighbor(curr) {
-            if id[next as usize] == graph.n {
-                Self::dfs(graph, next, gid, id, low, st, list);
+    impl&lt;'g, T: 'g&gt; Scc&lt;'g, T&gt; {
+        pub(super) fn new(graph: &amp;'g Graph&lt;T&gt;) -&gt; Self {
+            let mut st = SccStack::new(graph.n);
+            let mut list = vec![];
+            let mut gid = 0;
+            let mut id = vec![graph.n; graph.n];
+            let mut low = vec![usize::MAX; graph.n];
+
+            for x in 0..graph.n {
+                if id[x] != graph.n {
+                    continue;
+                }
+                Self::dfs(graph, x, &amp;mut gid, &amp;mut id, &amp;mut low, &amp;mut st, &amp;mut list);
+            }
+            list.reverse();
+
+            let mut ids = vec![0; graph.n];
+            for (i, l) in list.iter().enumerate() {
+                for &amp;v in l.iter() {
+                    ids[v] = i;
+                }
+            }
+
+            Self {
+                graph,
+                scc_list: list,
+                scc_ids: ids,
             }
         }
 
-        for (next, _) in graph.neighbor(curr) {
-            if st.is_in(next) {
-                low[curr as usize] = low[curr as usize].min(low[next as usize]);
+        fn dfs(
+            graph: &amp;Graph&lt;T&gt;,
+            curr: usize,
+            gid: &amp;mut usize,
+            id: &amp;mut Vec&lt;usize&gt;,
+            low: &amp;mut Vec&lt;usize&gt;,
+            st: &amp;mut SccStack,
+            list: &amp;mut Vec&lt;Vec&lt;usize&gt;&gt;,
+        ) {
+            st.push(curr);
+            id[curr] = *gid;
+            low[curr] = *gid;
+            *gid += 1;
+
+            for (next, _) in graph.neighbor(curr) {
+                if id[next] == graph.n {
+                    Self::dfs(graph, next, gid, id, low, st, list);
+                }
+            }
+
+            for (next, _) in graph.neighbor(curr) {
+                if st.contains(next) {
+                    low[curr] = low[curr].min(low[next]);
+                }
+            }
+
+            if id[curr] == low[curr] {
+                let mut newlist = vec![];
+                while let Some(popped) = st.pop() {
+                    if popped == curr {
+                        break;
+                    }
+                    newlist.push(popped);
+                }
+                newlist.push(curr);
+                list.push(newlist);
             }
         }
 
-        if id[curr as usize] == low[curr as usize] {
-            let p = list.len();
-            list.push(Vec::new());
-            while st.len() != 0 &amp;&amp; st.get() != curr {
-                list[p].push(st.pop());
-            }
-            st.pop();
-            list[p].push(curr);
+        /// Returns list of SCCs. Each vector in the list is a single SCC. The order of SCCs are
+        /// sorted in topological order. That is,, if u and v are in different SCCs, and there is
+        /// an edge from u to v, then the SCC containing u appears earlier than the SCC containing
+        /// v in the list. The order of vertices in each SCC is unspecified.
+        pub fn get_scc_list(&amp;self) -&gt; &amp;Vec&lt;Vec&lt;usize&gt;&gt; {
+            &amp;self.scc_list
+        }
+
+        /// Returns SCC ids. If u is in scc_list[i], then scc_id[u] = i.
+        pub fn get_scc_ids(&amp;self) -&gt; &amp;Vec&lt;usize&gt; {
+            &amp;self.scc_ids
         }
     }
 }</code></pre>
