deploy: 015e341c28ffb3ff5a62d32aeb7cd46237bf5041

--- a/print.html
+++ b/print.html
@@ -4536,7 +4536,7 @@ impl WeightDSU {
     }
 }</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="strongly-connected-components"><a class="header" href="#strongly-connected-components">Strongly Connected Components</a></h1>
-<p>Code for calculating SCCs. Tarjan's algorithm is used for the algorithm. <a href="graphs/./adjlist.html">Adjancy list representation</a> should be included in the code for this snippet to work.</p>
+<p>Finding SCCs of a directed graph. Tarjan's algorithm is used for the algorithm. <a href="graphs/./adjlist.html">Adjancy list representation</a> should be included in the code for this snippet to work.</p>
 <h2 id="example-14"><a class="header" href="#example-14">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust">use scc::*;
 <span class="boring">
