--- a/graphs/scc.html
+++ b/graphs/scc.html
@@ -148,7 +148,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="strongly-connected-components"><a class="header" href="#strongly-connected-components">Strongly Connected Components</a></h1>
-<p>Code for calculating SCCs. Tarjan's algorithm is used for the algorithm. <a href="./adjlist.html">Adjancy list representation</a> should be included in the code for this snippet to work.</p>
+<p>Finding SCCs of a directed graph. Tarjan's algorithm is used for the algorithm. <a href="./adjlist.html">Adjancy list representation</a> should be included in the code for this snippet to work.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust">use scc::*;
 <span class="boring">
